# xplia

./: .gitignore  .pypirc.example  ADVANCED_FEATURES_ROADMAP.md  CHANGELOG.md  CI_FIXES.md  CODE_OF_CONDUCT.md  COMPLETENESS_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  FINAL_STATUS_100_PERCENT.md  LICENSE  MANIFEST.in  README.md  USAGE_GUIDE.md  USAGE_GUIDE_FRANCAIS.md  dashboard_compliance.py  deploy_pypi.ps1  docker-compose.yml  pyproject.toml  quickstart.py  requirements.txt  setup.py  test_import.py
.github/workflows/: ci.yml
benchmarks/: benchmark_vs_competitors.py
docs/: ARCHITECTURE.md  FAQ.md  INSTALLATION.md  PLUGIN_DEVELOPMENT.md  compliance_guide.md  compliance_hipaa.md  compliance_tutorial.md  plugins_tutorial.md  trust_evaluation_guide.md  trust_integration_guide.md  trust_modules_api.md  trust_modules_guide.md  visualizations_api.md  visualizations_usage_guide.md
examples/: comprehensive_xplia_demo.py  direct_html_report_demo.py  expert_evaluation_demo.py  interactive_trust_demo.py  interactive_trust_demo_template.html  loan_approval_system.py  pdf_visualization_demo.py  pure_html_visualization_demo.py  run_custom_model_validation.py  standalone_visualization_demo.py  tier1_advanced_features_demo.py  tier2_tier3_advanced_demo.py  trust_formatter_demo.py  trust_metrics_simple_demo.py  trust_pipeline_demo.py  visualization_report_example.py
examples/visualizations/: direct_visualization_example.py  report_with_visualizations.py  simple_visualization_example.py
kubernetes/: deployment.yaml
notebooks/: 01_Quick_Start.ipynb  01_getting_started.ipynb  02_Advanced_Features.ipynb  02_tier1_advanced_features.ipynb  03_compliance_gdpr_ai_act.ipynb  README.md
output/: pure_html_visualization_demo.html
tests/: test_compliance.py  test_compliance_hipaa.py  test_core.py  test_factories.py  test_utils.py
tests/api/: __init__.py  test_public_api.py
tests/benchmarks/: __init__.py  test_performance.py
tests/compliance/: test_ai_act_advanced.py  test_ai_act_basic.py  test_ai_act_robustness_docs.py  test_ai_act_robustness_input.py  test_ai_act_robustness_risk.py  test_banking_use_case.py  test_gdpr.py  test_gdpr_robustness.py  test_generic_validation.py  test_integration.py  test_performance.py
tests/edge_cases/: __init__.py  test_error_handling.py
tests/explainers/: test_explainer_comparison.py  test_explainer_comparison_base.py  test_explainer_lime.py  test_explainer_shap.py  test_graph.py  test_multimodal.py  test_reinforcement.py  test_tier1_remaining.py  test_tier2.py  test_tier3.py  test_timeseries.py
tests/model_adapters/: __init__.py  test_pytorch_adapter.py  test_sklearn_adapter.py  test_xgboost_adapter.py
tests/visualizations/: __init__.py  test_chart_generator.py
xplia/: __init__.py  cli.py  visualizations.py
xplia/api/: __init__.py  fastapi_app.py
xplia/compliance/: __init__.py  ai_act.py  compliance_checker.py  compliance_report.py  explanation_rights.py  gdpr.py  hipaa.py  report_base.py  report_generator.py  translations.py
xplia/core/: __init__.py  base.py  config.py  factory.py  optimizations.py  registry.py
xplia/utils/: __init__.py  (+2 more)
(+128 files in other folders)
