[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xplia"
version = "1.0.1"
description = "XPLIA: The Ultimate State-of-the-Art AI Explainability Library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nicolas Severino", email = "nicolas.severino@example.com"}
]
keywords = [
    "explainability",
    "xai",
    "interpretability",
    "machine-learning",
    "deep-learning",
    "ai",
    "shap",
    "lime",
    "compliance",
    "gdpr",
    "ai-act"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "joblib>=1.1.0,<2.0.0",
    "jinja2>=3.0.0,<4.0.0",
    "markupsafe>=2.0.0,<3.0.0",
    "reportlab>=3.6.0,<5.0.0",
    "psutil>=5.8.0,<6.0.0",
]

[project.optional-dependencies]
xai = [
    "shap>=0.41.0,<1.0.0",
    "lime>=0.2.0,<1.0.0",
]
pytorch = [
    "torch>=1.10.0,<3.0.0",
    "torchvision>=0.11.0,<1.0.0",
]
tensorflow = [
    "tensorflow>=2.8.0,<3.0.0",
]
boosting = [
    "xgboost>=1.5.0,<3.0.0",
    "lightgbm>=3.3.0,<5.0.0",
    "catboost>=1.0.0,<2.0.0",
]
viz = [
    "plotly>=5.3.0,<6.0.0",
    "seaborn>=0.11.0,<1.0.0",
]
api = [
    "fastapi>=0.95.0,<1.0.0",
    "uvicorn>=0.20.0,<1.0.0",
    "pydantic>=1.10.0,<3.0.0",
]
mlops = [
    "mlflow>=2.0.0,<3.0.0",
    "wandb>=0.13.0,<1.0.0",
]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "black>=22.0.0,<25.0.0",
    "flake8>=5.0.0,<8.0.0",
    "mypy>=0.990,<2.0.0",
    "sphinx>=5.0.0,<8.0.0",
]
full = [
    "xplia[xai,pytorch,tensorflow,boosting,viz,api,mlops]",
]

[project.urls]
Homepage = "https://github.com/nicolasseverino/xplia"
Documentation = "https://xplia.readthedocs.io"
Repository = "https://github.com/nicolasseverino/xplia"
"Bug Tracker" = "https://github.com/nicolasseverino/xplia/issues"
Changelog = "https://github.com/nicolasseverino/xplia/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["xplia"]

[tool.setuptools.package-data]
xplia = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=xplia --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
